[workspace]
members = [
    "boring",
    "boring-sys",
    "tokio-boring",
]
resolver = "2"

[workspace.package]
version = "4.15.3"
repository = "https://github.com/0x676e67/boring2"
edition = "2021"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[workspace.dependencies]
boring-sys = { package = "boring-sys2", version = "4.15.3", path = "./boring-sys" }
boring = { package = "boring2", version = "4.15.3", path = "./boring" }
tokio-boring = { package = "tokio-boring2", version = "4.15.3", path = "./tokio-boring" }

bindgen = { version = "0.70.1", default-features = false, features = ["runtime"] }
bytes = "1"
cmake = "0.1.18"
fs_extra = "1.3.0"
fslock = "0.2"
bitflags = "2.4"
foreign-types = "0.5"
libc = "0.2"
hex = "0.4"
rusty-hook = "^0.11"
futures = "0.3"
tokio = "1"
anyhow = "1"
antidote = "1.0.0"
linked_hash_set = "0.1"
openssl-macros = "0.1.1"
autocfg = "1.3.0"
brotli = "7"
flate2 = "1"
zstd = "0.13"